2000-05-23  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/options.scm: add a currency option type.

	* src/gnome/dialog-options.c: add support for currency options.

	* src/gnome/dialog-utils.c (gnc_ui_account_field_box_create): used
	the new currency editor widget.

	* src/gnome/gnc-currency-edit.c: new widget for picking currencies.

2000-05-22  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/guile/guile-util.c (gnc_depend): new function to access the
	gnc:depend guile function.

2000-05-21  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-reconcile.c: use share balances when
	reconciling stock, mutual fund, and currency accounts.

2000-05-20  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Account.c (xaccAccountRecomputeBalance): added share,
	cleared share, and reconciled share balance tracking, along with
	api calls for getting them.

	* src/engine/Transaction.c: add calls to get share cleared and
	reconciled balance.

	* src/engine/Query.c: use g_list_prepend and then reverse when
	gathering splits. When pruning the list, prune from the beginning,
	not the end, per the original semantics. Handle the case when
	q->max_splits is 0.

	* src/gnome/dialog-add.c (accWindow): if the window is closed as a
	result of a gnome_dialog_close, don't save the size or destroy the
	window, it's already gone.

	* configure.in: remove check for readline. guile-config should
	return the right values. Also, change LOCALE_DIR definition to
	$datadir/locale. This seems to be more correct.

	* src/swig/perl5/Makefile.in: use -fPIC because it's needed on
	sparcs and doesn't seem to hurt for others.

	* src/gnome/window-register.c (gnc_register_sort): just sort by the
	given key and then by the standard order.

	* src/gnome/window-reconcile.c: add menus to change the sort order
	of the debits and credits list.

	* src/engine/Query.c: allow the sort order to be set as increasing
	or decreasing.

2000-05-19  Dave Peticolas  <peticola@cs.ucdavis.edu>
